--- a/Furniture-Moving-Project/src/main/resources/templates/fragments/navbar.html
+++ b/Furniture-Moving-Project/src/main/resources/templates/fragments/navbar.html
@@ -96,7 +96,7 @@
                     </div>
                     <!-- Hiển thị nút đăng nhập nếu chưa đăng nhập -->
                        <div th:unless="${isLoggedIn}">
-                            <a class="btn" href="/login">Đăng nhập/Đăng ký</a>
+                            <a class="btn" href="/login">Đăng xuất</a>
                         </div>
                 </div>
             </div>
