--- a/Furniture-Moving-Project/src/main/resources/templates/homepage/homepage.html
+++ b/Furniture-Moving-Project/src/main/resources/templates/homepage/homepage.html
@@ -138,14 +138,15 @@
                                 <p>Tự nhập hạng mục, số lượng và đơn giá.</p>
                                 <ul>
                                     <li>Kiểm soát chi tiết từng dòng</li>
+                                    <li>kiểm soát cấu trúc bảng giá</li>
                                     <li>Phù hợp yêu cầu đặc thù</li>
                                     <li>Dễ chỉnh sửa & lưu nháp</li>
                                 </ul>
                             </div>
                             <div class="action-footer">
-                                <button id="btn-manual-start" type="button" class="btn btn-primary">
+                                <a class="btn btn-primary" th:href="@{/providers}">
                                     <i class="fas fa-plus mr-1"></i> Tạo báo giá
-                                </button>
+                                </a>
                                 <button id="btn-manual-template" type="button" class="btn btn-outline-dark">
                                     <i class="far fa-file-alt mr-1"></i> Xem mẫu
                                 </button>
